--- a/output/css/tim.css
+++ b/output/css/tim.css
@@ -1609,7 +1609,7 @@ main section.bringOut {
 	animation: flipOut 512ms ease-out 1 both;
 }
 #resume-menu.bringIn {
-	animation: dropdown 512ms linear 1024ms 1 both;
+	animation: dropdown 800ms cubic-bezier(0.46, 2.06, 0.57, 0.66) 512ms 1 backwards;
 }
 
 /* Animations
@@ -1624,9 +1624,8 @@ main section.bringOut {
 }
 
 @keyframes dropdown {
-	0%   {opacity:   0; margin-top: -64px; }
-	80%  {opacity:   1; margin-top:  20px; }
-	100% {opacity:   1; margin-top:   0px; }
+	0%   {opacity:   0; transform: scale(1.2) translateY(-64px);}
+	100% {opacity:   1; transform: scale(1.0) translateY(  0px);}
 }
 @keyframes flip {
 	0%   {transform: rotate(  0deg);}
