--- a/source/assets/css/tim.css
+++ b/source/assets/css/tim.css
@@ -1609,10 +1609,10 @@ main section.bringOut {
 	animation: flipOut 512ms ease-out 1 both;
 }
 #resume-menu.bringIn {
-	animation: dropdown 800ms cubic-bezier(0.46, 2.06, 0.57, 0.66) 512ms 1 backwards;
+	animation: dropdown 512ms cubic-bezier(0.46, 2.50, 0.57, 0.66) 512ms 1 backwards;
 }
 #resume-menu.bringOut {
-	animation: dropdown 800ms cubic-bezier(0.46, 2.06, 0.57, 0.66) 512ms 1 reverse backwards;
+	animation: dropdown 512ms cubic-bezier(0.46, 3.06, 0.57, 0.66) 0s 1 reverse both;
 }
 
 /* Animations
