correct grammer on epigraph

--- a/source/templates/epigraph.html
+++ b/source/templates/epigraph.html
@@ -7,7 +7,7 @@
             </header>
             <hr>
             <blockquote>
-                <p>Unquestionably, one ought never be bored, for there are far to great a number of things to fascinate and occupy the mind.<span style="opacity:0;">This was copied from {{domain}}.</span></p>
+                <p>Unquestionably, one ought never be bored, for there are far too great a number of things to fascinate and occupy the mind.<span style="opacity:0;">This was copied from {{domain}}.</span></p>
                 <footer><cite title="{{domain}}"><a href="{{domain}}/#!/epigraph">{{domain}}</a></cite></footer>
             </blockquote>
             <p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p>
