--- a/source/templates/projects.html
+++ b/source/templates/projects.html
@@ -6,18 +6,42 @@
                 <hr>
             </div>
         </div>
-        <!--
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h2>Stats</h2>
-                <div id="project-stats">
+                <h2>Featured Projects</h2>
+                <div id="project-features">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="well well-sm text-center">
+                                <div class="iframe-wrap">
+                                    <iframe src="http://tmthydvnprt.com/quilt/"></iframe>
+                                </div>
+                                <h2><a href="http://tmthydvnprt.com/quilt/">quilt</a></h2>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="well well-sm text-center">
+                                <div class="iframe-wrap">
+                                    <iframe src="http://tmthydvnprt.com/juxtapy/"></iframe>
+                                </div>
+                                <h2><a href="http://tmthydvnprt.com/juxtapy/">juxtapy</a></h2>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="well well-sm text-center">
+                                <div class="iframe-wrap">
+                                    <iframe src="http://tmthydvnprt.com/aggregit/"></iframe>
+                                </div>
+                                <h2><a href="http://tmthydvnprt.com/aggregit/">aggregit</a></h2>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        -->
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h2>Repositories</h2>
+                <h2>All GitHub Repositories <small><a href="https://github.com/tmthydvnprt?tab=repositories" target="_blank" alt="tmthydvnprt's repos" title="tmthydvnprt's repos"><i class="fa fa-github"></i></a></small></h2>
                 <ul id="project-list" class="list-group">
                     <li class="list-group-item"><h1 class="text-center">...gathering data...</h1></li>
                 </ul>
