--- a/source/templates/projects.html
+++ b/source/templates/projects.html
@@ -7,13 +7,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
+            <div class="col-sm-12">
                 <h2>Featured Projects</h2>
                 <div id="project-features">
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="well well-sm text-center">
                                 <div class="iframe-wrap">
+                                    <div class="iframeblock"></div>
                                     <iframe src="http://tmthydvnprt.com/quilt/"></iframe>
                                 </div>
                                 <h2><a href="http://tmthydvnprt.com/quilt/">quilt</a></h2>
@@ -22,6 +23,7 @@
                         <div class="col-sm-4">
                             <div class="well well-sm text-center">
                                 <div class="iframe-wrap">
+                                    <div class="iframeblock"></div>
                                     <iframe src="http://tmthydvnprt.com/juxtapy/"></iframe>
                                 </div>
                                 <h2><a href="http://tmthydvnprt.com/juxtapy/">juxtapy</a></h2>
@@ -30,6 +32,7 @@
                         <div class="col-sm-4">
                             <div class="well well-sm text-center">
                                 <div class="iframe-wrap">
+                                    <div class="iframeblock"></div>
                                     <iframe src="http://tmthydvnprt.com/aggregit/"></iframe>
                                 </div>
                                 <h2><a href="http://tmthydvnprt.com/aggregit/">aggregit</a></h2>
