--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -20,7 +20,7 @@
 					<h3>Design</h3>
 					<hr>
 					<p>
-						The site's strucutre is based loosely on a book (epigraph, fliping animation, colophon, <abbr title="et cetera 'and so forth'">etc.</abbr>).
+						The site's structure is based loosely on a book (epigraph, fliping animation, colophon, <abbr title="et cetera 'and so forth'">etc.</abbr>).
                         A look at the <span class="code-font">source</span> of this site will identify a static one-page design with <code>&lt;template&gt;</code>s and a simple
 						 <code>hashchange</code> router. Downloading a whole website from one <code><abbr title="Uniform Resource Locator">url</abbr></code>,
 						 still with an interactive or nested experience, seems very elegant. Being interested in Machine Learning, the idea of
