--- a/source/templates/ruminations.html
+++ b/source/templates/ruminations.html
@@ -15,10 +15,10 @@
                             <li><code>Python</code> <small>(<abbr title="id est 'that is'">i.e.</abbr> executable pseudo-code!)</small></li>
                             <li>Data Visualization
                                 <ul>
-                                    <li>Ploting, Graphing</li>
+                                    <li>Plotting, Graphing</li>
                                     <li>Making complex data simple &amp; accessible</li>
                                     <li>Data Munging <a href="http://en.wikipedia.org/wiki/Data_wrangling" target="_blank"><sup>W</sup></a></li>
-                                    <li>Map Reduce<a href="http://en.wikipedia.org/wiki/MapReduce" target="_blank"><sup>W</sup></a> type aggregating</li>
+                                    <li>Map Reduce <a href="http://en.wikipedia.org/wiki/MapReduce" target="_blank"><sup>W</sup></a> type aggregating</li>
                                 </ul>
                             </li>
 				            <li>
@@ -40,7 +40,7 @@
 							<li>Grapheme <a href="http://en.wikipedia.org/wiki/Grapheme" target="_blank"><sup>W</sup></a> Processing
                                 <small>(character-based)</small>
                                 <ul>
-                                    <li>Syntax and Grammers</li>
+                                    <li>Syntax and Grammars</li>
                                     <li>Regular Expressions <a href="http://en.wikipedia.org/wiki/Regular_Expressions" target="_blank"><sup>W</sup></a></li>
                                     <li>Lexers <a href="http://en.wikipedia.org/wiki/Lexical_analysis" target="_blank"><sup>W</sup></a> and Parsers <a href="http://en.wikipedia.org/wiki/Parsing" target="_blank"><sup>W</sup></a></li>
                                 </ul>
