update resume navbar

--- a/source/templates/resume.html
+++ b/source/templates/resume.html
@@ -10,7 +10,7 @@
     <nav id="resume-menu" class="navbar navbar-default navbar-fixed-top bringIn">
         <div class="container">
             <div class="navbar-header">
-                <span class="navbar-brand">R&eacute;sum&eacute;:</span>
+                <span class="navbar-brand"><a href="#!/resume" class="no-hover">R&eacute;sum&eacute; :</a></span>
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="#document" class="no-hover"><i class="fa fa-fw fa-file-text"></i> document</a></li>
                     <li><a href="#timeline" class="no-hover"><i class="fa fa-fw fa-tasks"></i> timeline</a></li>
