--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -138,8 +138,8 @@
 					<hr>
                     <p>What's with the <code><abbr title="Uniform Resource Locator">url</abbr></code> &amp; name?</p>
                     <ol>
-                        <li>consistent user name, nobody had claimed it on <em>any</em> service I needed (\o/),</li>
-                        <li>begin interested in language and information transferred via characters, vowels are somewhat unnecessary to record, like the phoenician alphabet <a href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank"><sup>W</sup></a> or any abjad <a href="http://en.wikipedia.org/wiki/Abjad" target="_blank"><sup>W</sup></a>.</li>
+                        <li>consistent user name, nobody had claimed it on <em>any</em> service I needed \o/,</li>
+                        <li>being interested in language and information transferred via characters, vowels are somewhat unnecessary to record, like the phoenician alphabet <a href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank"><sup>W</sup></a> or any abjad <a href="http://en.wikipedia.org/wiki/Abjad" target="_blank"><sup>W</sup></a>.</li>
                     </ol>
 					<p>The <a href="#!/monogram">monogram</a> was made with tightly placed <code>html</code>/<code>css</code>. An embedded <code>base64</code> image version for the <samp><a href="#!/resume">#!/resume</a></samp> <em>page</em> was made with this really simple <a href="#!/base64imagepy">python script</a>.</p>
 					<p>The <em>planetary menu</em> is a nod to the wonder of astronomy and a, potentially humorous, commentary to the fact that by <em>navigating</em> my website, you are metaphorically <em>navigating</em> a world I created.</p>
