--- a/source/templates/projects.html
+++ b/source/templates/projects.html
@@ -14,28 +14,49 @@
                         <div class="col-sm-4">
                             <div class="well well-sm text-center">
                                 <div class="iframe-wrap">
-                                    <div class="iframeblock"></div>
+                                        <a href="http://tmthydvnprt.com/quilt/"  alt="Quilt" title="Quilt" class="no-hover">
+                                    <div class="iframeblock">
+                                        <div>
+                                            <h2>quilt</h2>
+                                            <h2><small>A <code>Python</code> based statis site <code>html</code> <em>stitcher</em>.</small></h2>
+                                        </div>
+                                    </div>
+                                        </a>
                                     <iframe src="http://tmthydvnprt.com/quilt/"></iframe>
                                 </div>
-                                <h2><a href="http://tmthydvnprt.com/quilt/">quilt</a></h2>
+                                <h2><a href="http://tmthydvnprt.com/quilt/">Quilt</a></h2>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="well well-sm text-center">
                                 <div class="iframe-wrap">
-                                    <div class="iframeblock"></div>
+                                        <a href="http://tmthydvnprt.com/juxtapy/" alt="Juxtapy" title="Juxtapy" class="no-hover">
+                                    <div class="iframeblock">
+                                        <div>
+                                            <h2>Juxtapy</h2>
+                                            <h2><small>Folder and File juxtaposing in Python</small></h2>
+                                        </div>
+                                    </div>
+                                        </a>
                                     <iframe src="http://tmthydvnprt.com/juxtapy/"></iframe>
                                 </div>
-                                <h2><a href="http://tmthydvnprt.com/juxtapy/">juxtapy</a></h2>
+                                <h2><a href="http://tmthydvnprt.com/juxtapy/">Juxtapy</a></h2>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="well well-sm text-center">
                                 <div class="iframe-wrap">
-                                    <div class="iframeblock"></div>
+                                        <a href="http://tmthydvnprt.com/aggregit/"  alt="Aggregit" title="Aggregit" class="no-hover">
+                                    <div class="iframeblock">
+                                        <div>
+                                            <h2>Aggregit</h2>
+                                            <h2><small>See <em>all</em> your data across <em>all</em> your GitHub repositories.</small></h2>
+                                        </div>
+                                    </div>
+                                        </a>
                                     <iframe src="http://tmthydvnprt.com/aggregit/"></iframe>
                                 </div>
-                                <h2><a href="http://tmthydvnprt.com/aggregit/">aggregit</a></h2>
+                                <h2><a href="http://tmthydvnprt.com/aggregit/">Aggregit</a></h2>
                             </div>
                         </div>
                     </div>
