--- a/source/templates/synopsis.html
+++ b/source/templates/synopsis.html
@@ -4,16 +4,18 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<header><h1><em>Synopsis</em></h1></header>
                 <hr>
-                <p class="lead">
-                    I have not yet written this.
-                </p>
 				<p class="lead">
-                    An electrical engineer turned computer scientist (after coming across extremely interesting techniques used during graduate research). 
+                    An electrical engineer turned computer scientist (after coming across extremely interesting techniques 
+                    used during graduate research). 
                 </p>
                 <p>
-                    Loves high-level languages &amp; algorithms that allow for development at an information / data level where most of the implementation is abstracted from the processing (enter python, stage right, playing the part of executable psuedo-code). With a good dose of client side web stack experience for interesting presentation layers and user interaction, long-term interests include python, machine learning, data-mining, data visualization and natural language processing.
+                    I love high-level languages &amp; algorithms that allow for development at an information/data level where <em>most</em> of the low level implementation is abstracted from the processing (enter python, stage right, playing the part of executable pseudo-code). With a good dose of client side web stack experience, a history of writing low level <abbr title="Digital Signal Processing">DSP</abbr> algorithms in <code>vhdl</code> on <abbr title="Field Programmable Gate Arrays">FPGA</abbr>s, and a continued research interest in machine learning, data-mining, natural language processing, 
+				</p>                
+                <p>
+                You know when you read a good book or a quote from your favorite author and you find one of those sentences where you just can't believe what they were able to express with a particular sequence of words? It can be simple or complex, short or long. It was so creative, exactly what you feel and know, but so clever that you are suprised?  Your spirits rise, you say Hmm? and AH HA! simultaneously and your mind is satisfied. That is how I feel when I read and write python.  I can't believe what and how things can be expressed with this language.  It is beautiful.
 				</p>
-
+                
+<!--// for creating interesting and beautiful presentation layers or user interactions // the possibilities of what can be done when one learns to talk to machines are endless! -->
 			</div>
 		</div>
 	</section>
