--- a/source/templates/resume.html
+++ b/source/templates/resume.html
@@ -12,8 +12,8 @@
             <div class="navbar-header">
                 <span class="navbar-brand"><a href="#!/resume" class="no-hover">R&eacute;sum&eacute; :</a></span>
                 <ul class="nav navbar-nav navbar-left">
-                    <li><a href="#document" class="no-hover"><i class="fa fa-fw fa-file-text"></i> document</a></li>
-                    <li><a href="#timeline" class="no-hover"><i class="fa fa-fw fa-tasks"></i> timeline</a></li>
+                    <li><a href="#document" class="no-hover"><i class="fa fa-fw fa-file-text-o"></i> document</a></li>
+                    <li><a href="#timeline" class="no-hover"><i class="fa fa-fw fa-sliders"></i> timeline</a></li>
                 </ul>
             </div>
         </div>
