--- a/source/assets/css/bootstrap.css
+++ b/source/assets/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=9f437ac4aea254ebe3b5)
- * Config saved to config.json and https://gist.github.com/9f437ac4aea254ebe3b5
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=31cbef52233dea4577fe)
+ * Config saved to config.json and https://gist.github.com/31cbef52233dea4577fe
  */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
@@ -1745,9 +1745,9 @@ output {
   font-size: 16px;
   line-height: 1.41421356;
   color: #565656;
-  background-color: #fdfefd;
+  background-color: #bbebe1;
   background-image: none;
-  border: 1px solid #336e7b;
+  border: 1px solid #16a085;
   border-radius: 0px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1756,10 +1756,10 @@ output {
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 .form-control:focus {
-  border-color: #428e9f;
+  border-color: #1ccdaa;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(66, 142, 159, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(66, 142, 159, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(28, 205, 170, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(28, 205, 170, 0.6);
 }
 .form-control::-moz-placeholder {
   color: #83dac8;
@@ -2860,8 +2860,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   line-height: 1;
   color: #565656;
   text-align: center;
-  background-color: #efefef;
-  border: 1px solid #336e7b;
+  background-color: #94dfd0;
+  border: 1px solid #16a085;
   border-radius: 0px;
 }
 .input-group-addon.input-sm {
@@ -3680,12 +3680,12 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 5px 14px;
   background-color: #fdfefd;
   border: 1px solid #dddddd;
-  border-radius: 15px;
+  border-radius: 0px;
 }
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  background-color: #efefef;
+  background-color: #dbeddb;
 }
 .pager .next > a,
 .pager .next > span {
@@ -3815,6 +3815,45 @@ a.badge:focus {
 }
 .nav-pills > li > a > .badge {
   margin-left: 3px;
+}
+.jumbotron {
+  padding: 32px 16px;
+  margin-bottom: 32px;
+  color: inherit;
+  background-color: #bbebe1;
+}
+.jumbotron h1,
+.jumbotron .h1 {
+  color: inherit;
+}
+.jumbotron p {
+  margin-bottom: 16px;
+  font-size: 24px;
+  font-weight: 200;
+}
+.jumbotron > hr {
+  border-top-color: #94dfd0;
+}
+.container .jumbotron,
+.container-fluid .jumbotron {
+  border-radius: 0px;
+}
+.jumbotron .container {
+  max-width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .jumbotron {
+    padding: 51.2px 0;
+  }
+  .container .jumbotron,
+  .container-fluid .jumbotron {
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+  .jumbotron h1,
+  .jumbotron .h1 {
+    font-size: 72px;
+  }
 }
 .thumbnail {
   display: block;
