--- a/source/assets/css/tim.css
+++ b/source/assets/css/tim.css
@@ -62,7 +62,27 @@ main:not(#page) > section > div {
 ----------------------------------------------------------------------------------------------------------------------------- */
 /* this navbar does not collapse */
 .navbar {
-    background-color: rgba(27, 188, 155, 0.95);
+    background-color: rgba(27, 188, 155, 0.98);
+	transition: all 512ms ease;
+}
+.navbar .container {
+    width: 100%;
+	transition: all 512ms ease;
+}
+@media (min-width: 768px) {
+    .navbar .container {
+        width: 752px;
+    }
+}
+@media (min-width: 992px) {
+    .navbar .container {
+        width: 972px;
+    }
+}
+@media (min-width: 1200px) {
+    .navbar .container {
+        width: 1172px;
+    }
 }
 .navbar-header {
     float:left!important;
@@ -70,8 +90,6 @@ main:not(#page) > section > div {
     margin-left: 32px!important;
 }
 .navbar-brand {
-/*    line-height: 1;*/
-/*    padding: 8px 16px;*/
     margin-left:0px!important;
 }
 
@@ -85,21 +103,24 @@ main:not(#page) > section > div {
 }
 .navbar-nav>li {
     float:left!important;
+	transition: all 512ms ease;
 }
 .navbar-nav>li>a {
     padding: 21px 8px;
-/*
-    font-size: 19px;
-    line-height: 22px;
-*/
     height: 64px;
+	transition: all 512ms ease;
+}
+@media (min-width: 768px) {
+    .navbar-nav>li>a {
+        padding: 21px 16px;
+    }
 }
 
 .navbar-form.navbar-left {
-    float:left!important
+    float:left!important;
 }
 .navbar-form.navbar-right {
-    float:right!important
+    float:right!important;
 }
 .navbar-form {
     width: auto!important;
@@ -210,10 +231,10 @@ a[href]:not(.no-hover)::before,
 time[datetime]:not(.no-hover)::before {
 	margin-top: 0px;    
 }
-nav .force-hover[title]:hover::before,
-nav abbr[title]:hover::before,
-nav a[href]:not(.no-hover):hover::before,
-nav time[datetime]:not(.no-hover):hover::before {
+.navbar .force-hover[title]:hover::before,
+.navbar abbr[title]:hover::before,
+.navbar a[href]:not(.no-hover):hover::before,
+.navbar time[datetime]:not(.no-hover):hover::before {
 	width:400%;
 	padding:8px 16px;
 	margin-top:64px;
@@ -374,6 +395,12 @@ body.blog {
 .blog .navbar-brand {
     padding-top: 2px;
 }
+.blog .navbar-nav li a i {
+    text-shadow:  0px 1px 0px #eee; 
+}
+.blog .navbar-nav li a i.fa-rotate-270 {
+    text-shadow:  -1px 0px 0px #eee; 
+}
 .blog .navbar-sub-brand {
     position: absolute;
     top: 38px;
@@ -382,17 +409,17 @@ body.blog {
     text-align: center;
     padding: 0 32px;
 }
-.blog nav .force-hover[title]::before,
-.blog nav abbr[title]::before,
-.blog nav a[href]:not(.no-hover)::before,
-.blog nav time[datetime]:not(.no-hover)::before {
+.blog .navbar .force-hover[title]::before,
+.blog .navbar abbr[title]::before,
+.blog .navbar a[href]:not(.no-hover)::before,
+.blog .navbar time[datetime]:not(.no-hover)::before {
     opacity: 0;
     white-space: nowrap;
 }
-.blog nav .force-hover[title]:hover::before,
-.blog nav abbr[title]:hover::before,
-.blog nav a[href]:not(.no-hover):hover::before,
-.blog nav time[datetime]:not(.no-hover):hover::before {
+.blog .navbar .force-hover[title]:hover::before,
+.blog .navbar abbr[title]:hover::before,
+.blog .navbar a[href]:not(.no-hover):hover::before,
+.blog .navbar time[datetime]:not(.no-hover):hover::before {
     opacity: 1;
 	width: auto;
 	padding:8px 16px;
@@ -427,28 +454,34 @@ body.blog {
 .blog .pager li>a {
     padding: 4px 8px;
 }
-.blog .jumbotron a.headerlink {
+.blog a.headerlink {
     color:#99d6c9;
 }
-.blog .jumbotron a.headerlink:hover {
+.blog a.headerlink:hover {
     color:#78c3b3;
 }
+.blog .ad > * {
+    padding:4px;
+    border: 1px solid #179f83;
+}
 .blog .markdown-link {
-    position: fixed;
-    bottom: 32px;
-    left: -110px;
+/*    position: fixed;*/
+/*    bottom: 32px;*/
+/*    left: -110px;*/
     border-right: 10px solid #005496;
+    border-left: 10px solid #005496;
     background: #addbff;
-    color: #eee;
+    color: #005496;
     padding: 4px 16px;
-    z-index:1000;
+/*    z-index:1000;*/
     width: 128px;
 	transition: all 512ms cubic-bezier(0.28, 1.51, 0.54, 0.75);
 }
 .blog .markdown-link:hover {
-    left: 0px;    
+/*    left: 0px;    */
     background: #2196f3;
     border-right: 3px solid #addbff;
+    border-left: 3px solid #addbff;
     color: #eee;
 }
 /* Blog animations */
